<resources>
    <string name="app_name">GDG Minna Lite</string>
    <string name="app_version">Version 1.0 beta</string>
    <string name="activity_name_organizer">Organizers and Team Leads</string>
    <string name="activity_name_wtm">Women Techmakers</string>
    <string name="activity_name_events">Major Events</string>
    <string name="activity_name_register">Register</string>
    <string name="activity_name_disclaimer">Disclaimer</string>
    <string name="activity_name_faq">Help/FAQ</string>
    <string name="activity_name_socialmedia">Social Media pages</string>
    <string name="activity_name_contactus">Contact Us</string>
    <string name="activity_name_feedback">FeedBack</string>
    <string name="activity_name_about">About</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_help_faq">Help/FAQ</string>
    <string name="action_about">About</string>
    <string name="action_feedback">Feedback</string>
    <string name="action_share">Share</string>
    <string name="action_disclaimer">Disclaimer</string>
    <string name="action_settings">Setting</string>
    <string name="gdg_content">"Google Developer Groups (GDGs) are for developers who are interested in Google&apos;s developer technology; everything from the Android, Chrome, Drive, and Google Cloud platforms, to product APIs like the Cast API, Maps API, and YouTube API.\n\nA GDG can take many forms, from just a few people getting together to watch our latest video, to large gatherings with demos and tech talks, to events like code sprints and hackathons. However, at the core, GDGs are focused on developers and technical content, and the core audience should be developers."</string>
    <string name="gdg_content2">"Run by passionate individuals in the developer community.\n\nA place to learn about Google Technologies and Tools for developers.\n\nA place to see what local companies and developers are doing with these technologies.\n\nFocused on developers and educational technical content.\n\nOpen to the public with a public membership.\n\nA place to meet cool and smart people in tech :)</string>
    <string name="gdg_content3">"Run by a corporation.\n\nA place to hear a very salesy pitch at any time.\n\nFocused on end users or consumer content."\n\nA closed group.</string>
    <string name="gdg_heading">What is a GDG?</string>
    <string name="gdg_heading2">A GDG is</string>
    <string name="gdg_heading3">A GDG is Not</string>
    <string name="gdgminna_content1">"Google developers group Minna (GDG Minna) is the first of its kind in Minna, Niger state. A technical community, a group for students, IT enthusiast and developers who are interested in learning, teaching and using Google&apos;s Developers technology; from Android, Google Cloud platforms, Chrome, App engine to product APIs like Youtube API, Maps API, Drive API, Google Calender API etc.\n\nThe group is managed by volunteers, experts in many fields. And we are always happy to accept new volunteers and members who are interested to be part of the team."\n\nGDG Minna is located in Minna the state capital of Niger State, Nigeria.</string>
    <string name="gdgminna_heading1">GDG Minna</string>
    <string name="gdgminna_content2">If you want to be part of us, check the <strong>JOIN US</strong> section of this app and visit our social media platforms to follow us on your favourite social media platform.\n\nNote: Links to our social media platforms are provided on the <strong>Social Media Platform</strong> section of this app\n</string>
    <string name="gdgminna_heading2">Want to be part of Us?</string>
    <string name="wtm_about">"About WTM"</string>
    <string name="wtm_event1">WTM Events</string>
    <string name="wtm_initiative">WTM Initiatives</string>
    <string name="wtm_story">WTM Story</string>
    <string name="wtm_event2">More</string>
    <string name="wtm_visibility">Visibility</string>
    <string name="wtm_community">Community</string>
    <string name="wtm_resources">"Resources"</string>
    <string name="about">"Women Techmakers is Google's brand and global program for women in technology. It aims at providing visibility, community, and resources for women in technology to drive innovation and participation in the field.\n\nWTM, as its generally referred to, aspires to create a space for women making epic things happen in the tech space to meet, discuss, and collaborate."</string>
    <string name="initiatives">"From 2014 to present, Women Techmakers is continually launching global scalable initiatives and piloting new programs to support and empower women in the industry. Receive updates from us when we're rolling out new initiatives."</string>
    <string name="event">"For the past three years the Women Techmakers team has convened over 200 global events across 52 countries to drive visibility, community, and resources for women in technology in honor of International Women's Day (IWD)."</string>
    <string name="our_story">"Kicked off in 2012 as a once-per-year event at I/O by then VP of Google[x] Megan Smith, Women Techmakers is now led by Head of Global Programs Natalie Villalobos and a global team of Googlers who are passionate about empowering women in technology."</string>
    <string name="visibility">"WTM Showcase the work and passions of women in the technology industry by providing a platform to celebrate their talents and spotlight role models."</string>
    <string name="Community">"WTM Create a supportive global community in which women can connect, be inspired, and encourage each other to realize their passions."</string>
    <string name="Resources">"WTM Provide opportunities to develop industry needed skill sets, aid career development, and support women to become industry leaders in all phases of their careers."</string>
    <string name="google_io1">"Google I/O (simply I/O) is an annual developer conference held by Google in San Francisco, California. I/O showcases technical in-depth sessions focused on building web, mobile, and enterprise applications with Google and open sources such as Android, Chrome and Chrome OS, APIs, Google Web Toolkit, App Engine, and more."</string>
    <string name="google_io_heading">Google IO</string>
    <string name="google_io2">"I/O was inaugurated in 2008, and is organized by the executive team. "I/O" stands for input/output, as well as the slogan "Innovation in the Open". The event's format is similar to Google Developer Day."</string>
    <string name="google_io_extended">"To extend this to developers who are unable to attend the event on-site, and reach out to various communities, Google created an initiative which helps augmenting this conference through various communities like the Google Developer Groups, Google Business Groups etc, in different locations titled as Google I/O Extended for the benefit of developers, students and start-up junkies around the world. "</string>
    <string name="google_io_extended_heading">Google IO Extended</string>
    <string name="dgd_devFests1">"GDG DevFests are large, community-run events that can offer speaker sessions across multiple product areas, all-day hack-a-thons, code labs, and more. In 2016, the official DevFest Season runs from September 01st through November 30th."</string>
    <string name="dgd_devFests_heading">GDG Devfest</string>
    <string name="dgd_devFests2">"Each GDG DevFest will be inspired by and uniquely tailored to the needs of the developer community that hosts it. While no two events will be exactly alike, each GDG DevFest will, at its core, be powered by a shared belief that when developers come together to exchange ideas, amazing things can happen."</string>
    <string name="studyjam1">"Google Developers Study Jams is a free series of global, community-run, in-person study groups. The current Study Jams series is presented in partnership with Udacity and will follow their Android for Beginners curriculum.\n\nPromote using hashtag #devstudyjam"</string>
    <string name="studyjam_heading">"Google Developers Study Jams"</string>
    <string name="Mission">"The mission of Study Jams is to provide a supplement to the online course experience with a live community learning environment will support students in completing the course and achieving certification. The goal is to provide deeper understanding in the course material within a fun and collaborative community environment."</string>
    <string name="mission_heading">Heading</string>
    <string name="studyjam2">"Study Jams are an opportunity for students to receive free, in-person guidance and tutoring on the Udacity course in a fun classroom environment."</string>
    <string name="register">"To Join GDG Minna below is a link to our online form, fill it, ensure you submit and receive a success message."</string>
    <string name="register2">"Dont forget to visit our social media pages for updates on upcoming events and meetings/meetups."</string>
    <string name="disclaimer">GDG Minna is an Independent Group; Our Activities and the Opinions Expressed on this App Should in no way be Linked to Google, The Corporation.</string>
    <string name="disclaimer1">Visit the GDG page on Google Developers website. If you have any questions, visit the support page. You can also follow our Youtube channel.</string>
    <string name="disclaimer2">"Visit the directory to see if there's a local meetup in your area. Feel free to contact the organizers to find out more about the particular GDG you want to join .\nClick on the link below to join GDG Minna:"</string>
    <string name="disclaimer3">The GDG is an initiative formed out of passion and good will. However, the long-term benefits are many.\n</string>
    <string name="disclaimer4">If you love internet technologies and enjoy exploring them with others, you’ll love being involved in a chapter or even being its founder. You’ll be able to bring together great speakers and like-minded audience and do things together that YOU personally like to do, but on a larger scale and with your direct influence on what that will be. While you could of course do this yourself anytime, the association with GDG brings you personally closer to the Google world, helps you in promoting and running your events and will let you get inspiration from more than 500 other GDG organizers around the world. You will also learn a lot yourself - from organizing and leading people, through running events to growing your technical knowledge. The GDG leadership position isn’t paid, but it lets you get a lot of other benefits.</string>
    <string name="disclaimer5">GDG Organizers <b>are not</b> Googlers(Working with Google). Google Sponsor GDGs Events.</string>
    <string name="disclaimer6">Leaders (chapter leaders, project organizers, country coordinators, etc.) are by far the key people in communities, who influence everything - other organizers, culture, activities. Leaders and organizers are capable technical, people-wise and organization wise. An organizer is responsible for:\n\n
        1. Networking with people.\n\n
        2. Event production.\n\n
        3. Inspiring people to do stuff.\n\n
        4. Leading people to make a decision.\n\n
        5. Offering things to do.</string>
    <string name="disclaimer7">"If you want to know more about Women Techmakers or you are interested in joining the Women Techmakers movement visit the link below:"</string>
    <string name="text_faq">"Lets us know your experiences with the app, what you think is missing or should be added/included and don't forget to report bugs as soon as you find one."</string>
    <string name="message">GDG Minna lite app is designed specifically for less/no data usage, that is to say it is designed to work offline, prevent round tripe to any serve and consumes less device memory space.</string>
</resources>