<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_share"
        android:orderInCategory="100"
        android:title="@string/action_share"
        app:showAsAction="always"
        android:icon="@drawable/ic_menu_share" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_feedback"
        android:orderInCategory="100"
        android:title="@string/action_feedback"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_help_faq"
        android:orderInCategory="100"
        android:title="@string/action_help_faq"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_disclaimer"
        android:orderInCategory="100"
        android:title="@string/action_disclaimer"
        app:showAsAction="never" />


</menu>
