<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_wtm"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.gdgminna.android.gdgminna.WTMActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#ECEFF1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#ECEFF1">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="0dp"
                android:background="@drawable/wtm_connect"/>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:background="@drawable/mix_colour"/>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="10dp"
                    app:cardMaxElevation="7dp"
                    app:cardUseCompatPadding="true"
                    app:cardElevation="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        android:background="@drawable/wtm_pic1">

                        <TextView
                            android:id="@+id/about_wtm"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/wtm_about"
                            android:textStyle="bold"
                            android:padding="5dp"
                            android:textSize="20sp"
                            android:textColor="@android:color/black"
                            android:fontFamily="roboto medium"/>
                        </LinearLayout>

                        <TextView
                            android:id="@+id/about"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/about"
                            android:padding="7dp"
                            android:layout_marginLeft="5dp"
                            android:textSize="16sp"
                            android:textColor="@android:color/black"
                            android:fontFamily="roboto medium"/>

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="20dp"
                            android:src="@drawable/mix_colour"
                            android:scaleType="centerCrop"/>

                    </LinearLayout>
                </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="10dp"
                        android:elevation="7dp"
                        app:cardUseCompatPadding="true"
                        app:cardElevation="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="250dp"
                                android:orientation="vertical"
                                android:background="@drawable/wtm_pic2">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/wtm_initiative"
                                    android:textStyle="bold"
                                    android:padding="5dp"
                                    android:textSize="20sp"
                                    android:textColor="@android:color/white"
                                    android:fontFamily="roboto medium"/>
                            </LinearLayout>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/initiatives"
                                android:padding="7dp"
                                android:layout_marginLeft="5dp"
                                android:textSize="16sp"
                                android:textColor="@android:color/black"
                                android:fontFamily="roboto medium"/>

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="20dp"
                                android:src="@drawable/mix_colour"
                                android:scaleType="centerCrop"/>

                        </LinearLayout>
                    </android.support.v7.widget.CardView>

                        <android.support.v7.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:cardCornerRadius="10dp"
                            android:elevation="7dp"
                            app:cardUseCompatPadding="true"
                            app:cardElevation="10dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="vertical">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="250dp"
                                    android:orientation="vertical"
                                    android:background="@drawable/story">

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/wtm_story"
                                        android:textStyle="bold"
                                        android:padding="5dp"
                                        android:textSize="20sp"
                                        android:textColor="@android:color/black"
                                        android:fontFamily="roboto medium"/>
                                </LinearLayout>

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/our_story"
                                    android:padding="7dp"
                                    android:layout_marginLeft="5dp"
                                    android:textSize="16sp"
                                    android:textColor="@android:color/black"
                                    android:fontFamily="roboto medium"/>

                                <ImageView
                                    android:layout_width="match_parent"
                                    android:layout_height="20dp"
                                    android:src="@drawable/mix_colour"
                                    android:scaleType="centerCrop"/>

                            </LinearLayout>
                        </android.support.v7.widget.CardView>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"/>

                        <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="200dp"
                            android:background="@drawable/wtm_pic"/>
                        <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="90dp"
                            android:background="@drawable/wtm_google"/>

                    </LinearLayout>
                            <android.support.v7.widget.CardView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                app:cardCornerRadius="10dp"
                                android:elevation="7dp"
                                app:cardUseCompatPadding="true"
                                app:cardElevation="10dp">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:orientation="vertical">

                                    <LinearLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="250dp"
                                        android:orientation="vertical"
                                        android:background="@drawable/visibility">

                                        <TextView
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:text="@string/wtm_visibility"
                                            android:textStyle="bold"
                                            android:padding="5dp"
                                            android:textSize="20sp"
                                            android:textColor="@android:color/black"
                                            android:fontFamily="roboto medium"/>
                                    </LinearLayout>

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/visibility"
                                        android:padding="7dp"
                                        android:layout_marginLeft="5dp"
                                        android:textSize="16sp"
                                        android:textColor="@android:color/black"
                                        android:fontFamily="roboto medium"/>

                                    <ImageView
                                        android:layout_width="match_parent"
                                        android:layout_height="20dp"
                                        android:src="@drawable/mix_colour"
                                        android:scaleType="centerCrop"/>

                                </LinearLayout>
                            </android.support.v7.widget.CardView>

                                <android.support.v7.widget.CardView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    app:cardCornerRadius="10dp"
                                    android:elevation="7dp"
                                    app:cardUseCompatPadding="true"
                                    app:cardElevation="10dp">

                                    <LinearLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:orientation="vertical">

                                        <LinearLayout
                                            android:layout_width="match_parent"
                                            android:layout_height="250dp"
                                            android:orientation="vertical"
                                            android:background="@drawable/wtm_community">

                                            <TextView
                                                android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:text="@string/wtm_community"
                                                android:textStyle="bold"
                                                android:padding="5dp"
                                                android:textSize="20sp"
                                                android:textColor="@android:color/black"
                                                android:fontFamily="roboto medium"/>
                                        </LinearLayout>

                                        <TextView
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:text="@string/Community"
                                            android:padding="7dp"
                                            android:layout_marginLeft="5dp"
                                            android:textSize="16sp"
                                            android:textColor="@android:color/black"
                                            android:fontFamily="roboto medium"/>

                                        <ImageView
                                            android:layout_width="match_parent"
                                            android:layout_height="20dp"
                                            android:src="@drawable/mix_colour"
                                            android:scaleType="centerCrop"/>
                                    </LinearLayout>
                                </android.support.v7.widget.CardView>

                                    <android.support.v7.widget.CardView
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        app:cardCornerRadius="10dp"
                                        android:elevation="7dp"
                                        app:cardUseCompatPadding="true"
                                        app:cardElevation="10dp">

                                        <LinearLayout
                                            android:layout_width="match_parent"
                                            android:layout_height="match_parent"
                                            android:orientation="vertical">

                                            <LinearLayout
                                                android:layout_width="match_parent"
                                                android:layout_height="250dp"
                                                android:orientation="vertical"
                                                android:background="@drawable/wtm_resource">

                                                <TextView
                                                    android:layout_width="wrap_content"
                                                    android:layout_height="wrap_content"
                                                    android:text="@string/wtm_resources"
                                                    android:textStyle="bold"
                                                    android:padding="5dp"
                                                    android:textSize="20sp"
                                                    android:textColor="@android:color/white"
                                                    android:fontFamily="roboto medium"/>
                                            </LinearLayout>

                                            <TextView
                                                android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:text="@string/Resources"
                                                android:padding="7dp"
                                                android:layout_marginLeft="5dp"
                                                android:textSize="16sp"
                                                android:textColor="@android:color/black"
                                                android:fontFamily="roboto medium"/>

                                            <ImageView
                                                android:layout_width="match_parent"
                                                android:layout_height="20dp"
                                                android:src="@drawable/mix_colour"
                                                android:scaleType="centerCrop"/>

                                        </LinearLayout>
                                    </android.support.v7.widget.CardView>


    </LinearLayout>
</ScrollView>